@@ -2,7 +2,7 @@ sg3-utils (1.31-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Doug Gilbert <dgilbert@interlog.com>  Mon, 10 Jan 2011 15:00:00 +0100
+ -- Doug Gilbert <dgilbert@interlog.com>  Sat, 22 Jan 2011 17:30:00 +0100
 
 sg3-utils (1.30-0.1) unstable; urgency=low
 
